# datum-network-fighter

./: .gitignore  .gitmodules  Dockerfile  MANIFEST.in  README.md  clean_directory.sh  compile_proto_file.py  docker-compose.yml  nodes_conf_example.json  onekey_deploy.py  requirements.txt  setup.cfg
algorithm/alignment/: README.md  alignment.py  alignment_config.json
algorithm/logistic_regression/: README.md  logistic_algorithm.py  lr_config.json  lr_config_predict.json  lr_predict.py  lr_train.py  rtt_config_template.json
algorithms/: README.md
algorithms/dnn/: dnn_predict.py  dnn_train.py
algorithms/linear_regression/: linear_reg_predict.py  linear_reg_train.py
algorithms/logistic_regression/: logistic_reg_predict.py  logistic_reg_train.py
algorithms/metis0/: agent_helper.py  config.yaml  data_helper.py  evaluate.py  evaluator.py  inferencer.py  model_helper.py  nn.py  optimize.py  optimizer.py  player.py  player_mcts.py  simulate.py  simulator.py
algorithms/non-privacy/: README.md
algorithms/privacy/: README.md
algorithms/private_set_intersection/: psi.py
algorithms/xgboost/: xfboost_predict.py  xgboost_predict.py  xgboost_train.py
armada-common/: README.md
armada-common/Fighter/: compute_svc.proto  data_svc.proto  io_channel.proto  net_comm_svc.proto  schedule_svc.proto  via_svc.proto
certs/: CA.crt  CA.key  CA.pem  CE.crt  CE.key  CE.pem  CE01.crt  CE01.key  CE01.pem  CE02.crt  CE02.key  CE02.pem  CE10.crt  CE10.key  CE10.pem  CE12.crt  CE12.key  CE12.pem  CE20.crt  CE20.key  CE20.pem  CE21.crt  CE21.key  CE21.pem  CS.crt  CS.key  CS.pem  CS01.crt  CS01.key  CS01.pem  CS02.crt  CS02.key  CS02.pem  CS10.crt  CS10.key  CS10.pem  CS12.crt  CS12.key  CS12.pem  CS20.crt  (+30 more)
common/: consts.py  event_engine.py  event_engine_unittest.py  io_channel.py  io_channel_helper.py  net_io.py  report_engine.py  socket_utils.py  task.py  task_manager.py  utils.py  via_client.py
common_module/: channel_config_template.json  consts.py  event_engine.py  io_channel_helper.py  report_engine.py  socket_utils.py  task.py  task_manager.py  utils.py
compute_svc/: config.py  config.yaml  main.py  net_comm_svc.py  start_compute_svc.sh  start_svc.sh  svc.py  task.py  task_manager.py
console/: README.md  config.yaml  get_task_cfg.py  main.py  run_task_cfg.json
console/non-privacy/: task_cfg_dnn_predict.json  task_cfg_dnn_train.json  task_cfg_kmeans_predict.json  task_cfg_kmeans_train.json  task_cfg_knn_predict.json  task_cfg_knn_train.json  task_cfg_linr_predict.json  task_cfg_linr_train.json  task_cfg_lr_predict.json  task_cfg_lr_train.json  task_cfg_svm_predict.json  task_cfg_svm_train.json  task_cfg_xgb_predict.json  task_cfg_xgb_train.json
console/privacy/: task_cfg_dnn_predict.json  task_cfg_dnn_train.json  task_cfg_feature_iv.json  task_cfg_linr_predict.json  task_cfg_linr_train.json  task_cfg_lr_predict.json  task_cfg_lr_train.json  task_cfg_psi.json  task_cfg_psi_alignment.json  task_cfg_psi_labeled.json  task_cfg_xgb_predict.json  task_cfg_xgb_train.json
console/run_task_cfg_template/: task_cfg_template_cluster.json  task_cfg_template_local.json
consul_client/: __init__.py  api.py
consul_client/health/: health_grpc_check.py  health_pb2_grpc.py
data_svc/: config.py  config.yaml  main.py  start_data_svc.sh  start_svc.sh  svc.py
data_svc/data/: 1-test_bank.csv  1-test_insurance.csv  alignment_result_0.csv  alignment_result_1.csv
doc/: dfs.md
gateway/: compute_gateway.go  data_gateway.go  generate_gateway.sh  go.mod  start_gateway.sh  start_stop_gateway.sh
gateway/common/: common.go  config.ini
lib/: common_pb2.py  compute_svc_pb2.py  compute_svc_pb2_grpc.py  data_svc_pb2.py  data_svc_pb2_grpc.py  io_channel_pb2.py  io_channel_pb2_grpc.py  via_svc_pb2.py  via_svc_pb2_grpc.py
lib/api/: sys_rpc_api_pb2.py  sys_rpc_api_pb2_grpc.py  task_rpc_api_pb2.py  task_rpc_api_pb2_grpc.py
lib/common/: base_pb2.py  data_pb2.py
lib/types/: base_pb2.py  identitydata_pb2.py  resourcedata_pb2.py  taskdata_pb2.py
mod_net/: io_channel.h  mychannel.cpp
protos/: common_pb2.py  compute_svc.proto  compute_svc_pb2.py  compute_svc_pb2_grpc.py  data_svc.proto  data_svc_pb2.py  data_svc_pb2_grpc.py  io_channel_pb2.py  io_channel_pb2_grpc.py  net_comm_svc.proto  schedule_svc.proto  via_svc.proto  via_svc_pb2.py  via_svc_pb2_grpc.py
scripts/: gen_proto.sh
tests/: README.md  fast_check.sh  test_compute_svc.py  test_data_svc.py  test_event_engine.py  test_helper.py  test_http_interface.py  test_rpc_interface.py  test_svc_via.py
tests/cluster_test/: deploy_cluster.sh  generate_nodes_conf.sh  kill.sh  run_task.sh
tests/schedule_svc/: config.py  config.yaml  main.py  start_svc.sh  svc.py
tests/standalone_test/: config.ini  generate_task_cfg.py  generate_task_cfg.sh  get_task_cfg.py  kill.sh  (+4 more)
tools/: compile_proto_file.py  onekey_deploy.py  onekey_deploy_1by1.py  start_v3_service.sh  start_v3_service_single.sh
via_svc/: config.yaml  main.py  start_svc.sh  start_svc_batch.sh  start_via_svc.sh  svc.py
(+88 files in other folders)
