[metadata]
name = fighter_dcv
version = 0.9.1
author = matrix elements
author_email = liuhui@matrixelements.com
description = RosettaFlow data & computation service
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    fighter=

packages =
    fighter
    fighter.common_module
    fighter.pb
    fighter.pb.carrier
    fighter.pb.carrier.api
    fighter.pb.carrier.types
    fighter.pb.common
    fighter.pb.common.constant
    fighter.pb.fighter
    fighter.pb.fighter.api
    fighter.pb.fighter.api.compute
    fighter.pb.fighter.api.data
    fighter.pb.fighter.types
    fighter.pb.google
    fighter.pb.google.api
    fighter.consul_client
    fighter.consul_client.health
    fighter.data_svc
    fighter.compute_svc

python_requires = >=3.7
include_package_data = true
install_requires =
    numpy==1.19.5
    pandas==1.1.5
    grpcio==1.38.1
    grpcio-reflection==1.37.1
    grpcio-tools==1.36.1
    pyyaml==5.4.1
    cryptography==2.1.4
    psutil==5.8.0
    google-api-core==1.28.0
    scikit-learn==0.24.2
    tensorflow==1.14.0
    python-consul2==0.1.5


[options.packages.find]
exclude =
    =armada-common
    =third_party
    =console
    =tests
    =tools
    =build
    =dist


[options.entry_points]
console_scripts =
    start_data_svc = fighter.data_svc.main:main
    start_compute_svc = fighter.compute_svc.main:main
