[metadata]
name = fighter_dcv
version = 0.9.1
author = matrix elements
author_email = liuhui@matrixelements.com
description = data & computation service
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    fighter_project=

packages =
    fighter_project
    fighter_project.common_module
    fighter_project.pb
    fighter_project.pb.carrier
    fighter_project.pb.carrier.api
    fighter_project.pb.carrier.types
    fighter_project.pb.common
    fighter_project.pb.common.constant
    fighter_project.pb.fighter
    fighter_project.pb.fighter.api
    fighter_project.pb.fighter.api.compute
    fighter_project.pb.fighter.api.data
    fighter_project.pb.fighter.types
    fighter_project.pb.google
    fighter_project.pb.google.api
    fighter_project.consul_client
    fighter_project.consul_client.health
    fighter_project.data_svc
    fighter_project.compute_svc

python_requires = >=3.7
include_package_data = true
install_requires =
    numpy==1.19.5
    pandas==1.1.5
    grpcio==1.38.1
    grpcio-reflection==1.37.1
    grpcio-tools==1.36.1
    pyyaml==5.4.1
    cryptography==2.1.4
    psutil==5.8.0
    google-api-core==1.28.0
    scikit-learn==0.24.2
    tensorflow==1.14.0
    python-consul2==0.1.5


[options.packages.find]
exclude =
    =armada-common
    =third_party
    =console
    =tests
    =tools
    =build
    =dist


[options.entry_points]
console_scripts =
    start_data_svc = fighter_project.data_svc.main:main
    start_compute_svc = fighter_project.compute_svc.main:main
